deployment/k8s/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.apisnoop.webapp: webapp
  template:
    metadata:
      labels:
        io.apisnoop.webapp: webapp
    spec:
      restartPolicy: Always
      containers:
      - name: webapp
        image: "raiinbow/webapp:2020-01-09-09-01"
        ports:
        - containerPort: 3000
